NetBSD Problem Report #41167

From perry@piermont.com  Tue Apr  7 15:40:59 2009
Return-Path: <perry@piermont.com>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id C508563B8A5
	for <gnats-bugs@gnats.NetBSD.org>; Tue,  7 Apr 2009 15:40:58 +0000 (UTC)
Message-Id: <20090407154055.DBC69168D0EF@piermont.com>
Date: Tue,  7 Apr 2009 11:40:55 -0400 (EDT)
From: perry@piermont.com
Reply-To: perry@piermont.com
To: gnats-bugs@gnats.NetBSD.org
Subject: tar failure (inexplicable, easily reproduced)
X-Send-Pr-Version: 3.95

>Number:         41167
>Category:       bin
>Synopsis:       tar failure (inexplicable, easily reproduced)
>Confidential:   no
>Severity:       critical
>Priority:       high
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Tue Apr 07 15:45:00 +0000 2009
>Closed-Date:    Tue Apr 07 19:53:09 +0000 2009
>Last-Modified:  Sat Jan 30 19:20:08 +0000 2010
>Originator:     Perry E. Metzger
>Release:        NetBSD 5.99.8
>Organization:

>Environment:


System: NetBSD bellman.cb.piermont.com 5.99.8 NetBSD 5.99.8 (GENERIC) amd64
Architecture: x86_64
Machine: amd64
>Description:

tar(1) fails in a particular weird case (exemplified by untaring a
pair of files from a base.tgz netbsd install set.)

gtar succeeds in the same case with no trouble.

>How-To-Repeat:

Fails:
tar -xzf releasedir/amd64/binary/sets/base.tgz ./rescue/[ ./rescue/atactl
Succeeds:
gtar -xzf releasedir/amd64/binary/sets/base.tgz ./rescue/[ ./rescue/atactl

See this transcript:

$ tar -xzf /releasedir/amd64/binary/sets/base.tgz ./rescue/[ ./rescue/atactl
tar: Cannot link to ./rescue/[ from ./rescue/atactl (No such file or directory)
tar: WARNING! These patterns were not matched:
./rescue/[
$ ls rescue
ls: rescue: No such file or directory
$ gtar -xzf releasedir/amd64/binary/sets/base.tgz ./rescue/[ ./rescue/atactl
$ ls -l rescue
total 10112
-r-xr-xr-x  2 perry  staff  5148632 Apr  5 14:58 [
-r-xr-xr-x  2 perry  staff  5148632 Apr  5 14:58 atactl

>Fix:


>Release-Note:

>Audit-Trail:

State-Changed-From-To: open->closed
State-Changed-By: perry@NetBSD.org
State-Changed-When: Tue, 07 Apr 2009 19:53:09 +0000
State-Changed-Why:
Fix written by christos, committed by me.
.


From: "David A. Holland" <dholland@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/41167 CVS commit: src/bin/pax
Date: Mon, 14 Dec 2009 05:04:48 +0000

 Module Name:	src
 Committed By:	dholland
 Date:		Mon Dec 14 05:04:48 UTC 2009

 Modified Files:
 	src/bin/pax: options.c

 Log Message:
 Don't use NOGLOB_MTCH for pax, only for tar. Fixes fix for PR 41167 and
 closes PR 42301. Since the 41167 fix was pulled up to -5, this needs to
 be too.


 To generate a diff of this commit:
 cvs rdiff -u -r1.105 -r1.106 src/bin/pax/options.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: Soren Jacobsen <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/41167 CVS commit: [netbsd-5] src/bin/pax
Date: Sat, 30 Jan 2010 19:17:17 +0000

 Module Name:	src
 Committed By:	snj
 Date:		Sat Jan 30 19:17:17 UTC 2010

 Modified Files:
 	src/bin/pax [netbsd-5]: options.c

 Log Message:
 Pull up following revision(s) (requested by dholland in ticket #1272):
 	bin/pax/options.c: revision 1.106
 Don't use NOGLOB_MTCH for pax, only for tar. Fixes fix for PR 41167 and
 closes PR 42301. Since the 41167 fix was pulled up to -5, this needs to
 be too.


 To generate a diff of this commit:
 cvs rdiff -u -r1.101.12.3 -r1.101.12.4 src/bin/pax/options.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.