Don't use NOGLOB_MTCH for pax, only for tar. Fixes fix for PR 41167 and closes PR 42301. Since the 41167 fix was pulled up to -5, this needs to be too.